# OpenClaw-Skill-Hack

./: .gitignore  CONTRIBUTING.md  ETHICS.md  INTERFACE.md  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: experiment.yaml
data/benign_realistic/json_formatter/: SKILL.md
data/malicious_realistic/clawhavoc_infostealer/: SKILL.md  setup.sh
data/malicious_realistic/credential_curl/: SKILL.md
data/malicious_realistic/obfuscated_loader/: SKILL.md  loader.py
data/malicious_realistic/postmark_bcc_exfil/: SKILL.md  tool.py
data/skills_benign/weather/: SKILL.md
deploy/: README.md  cloud-init.yaml
deploy/aliyun/: README.md  USAGE.md  launch.sh  teardown.sh
deploy/aws/: README.md  launch.sh  teardown.sh
docs/: code.tex  skillspector-comparison.md  workflow-design.md
examples/your-skills/: README.md
experiment_minimal/: README.md  panel.html  run.py
firewall/: __init__.py  cli.py  config.py
firewall/docker/: Dockerfile  Dockerfile.openclaw  compose.yml  entrypoint.sh
firewall/gate/: __init__.py  static_scanner.py
firewall/integrations/: __init__.py
firewall/panel/: __init__.py  tui.py
firewall/runtime/: __init__.py  canary.py  egress_proxy.py  events.py  firewall.py  supervisor.py
firewall/skills/: __init__.py  discover.py
sandbox/: .env.example  Dockerfile  Dockerfile.openclaw  Dockerfile.scanner  README.md  canary.py  cisco_scan.sh  console.py  docker-compose.yml  egress_policy.py  egress_proxy.py  entrypoint.sh  gate.sh  gate_custom.sh  labctl.sh  monitor.sh  run_sandbox.sh  skillctl.sh  supervisor.py  verify.sh
src/asshack/: __init__.py
tests/unit/: test_doctor.py  test_firewall_invariants.py  test_integrations.py  test_skill_discovery.py  test_static_scanner.py  test_supervisor.py
(+37 files in other folders)
