[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-firewall"
version = "0.1.0"
description = "Runtime behavioral firewall for Agent Skills — observe, don't guess."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "skills", "firewall", "security", "openclaw", "claude-code", "runtime"]
authors = [
  { name = "AgentSkillsHack contributors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "textual>=0.74",
  "platformdirs>=4.2",
  "tomli-w>=1.0",
  "tomli>=2.0; python_version < '3.11'",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/KuiyiGao/OpenClaw-Skill-Hack"
Issues = "https://github.com/KuiyiGao/OpenClaw-Skill-Hack/issues"

[project.scripts]
firewall = "firewall.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["firewall*"]
exclude = ["tests*", "console_archive*", "experiment_minimal*"]

[tool.setuptools.package-data]
"firewall" = [
  "examples/skills/*/SKILL.md",
  "examples/skills/*/scripts/*",
  "examples/workspace/*/*",
  "docker/*",
  "integrations/openclaw/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
